Bug 593663: emulate flat regexps in three-argument String.prototype.replace. (r=lw)